--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-container {
+  position: sticky;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 68px;
   display: flex;
-  flex-direction: column;
+  background-color: #e5e5e5;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  padding-inline: 48px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
 }
 
-.App-link {
-  color: #61dafb;
+.brand-container {
+  display: flex;
+  gap: 12px;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.logo {
+  height: 48px;
+}
+
+.logo-text {
+  font-size: 28px;
+  font-weight: 700;
+  color: #000;
+}
+
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.links-list {
+  list-style: none;
+}
+
+.link-item > a {
+  color: #000;
+  font-size: 20px;
+}
+
+.link-item > a:hover {
+  border-bottom: 4px solid #000;
 }
