--- a/src/App.css
+++ b/src/App.css
@@ -1,30 +1,60 @@
-body {
-  padding: 0;
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&display=swap');
+
+* {
+  box-sizing: border-box;
   margin: 0;
+  padding: 0;
+  font-family: 'Lato', sans-serif;
 }
 
-header {
-  background-color: #EC4C8A;
-  color: #fff;
+a {
+  text-decoration: none;
 }
 
-nav {
+.header-container {
+  position: sticky;
+  left: 0;
+  right: 0;
+  top: 0;
+  height: 68px;
   display: flex;
-  justify-content: space-around;
+  background-color: #e5e5e5;
+  justify-content: space-between;
+  align-items: center;
+  padding-inline: 48px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
+}
+
+.brand-container {
+  display: flex;
+  gap: 12px;
   align-items: center;
 }
 
-nav a {
-  text-decoration: none;
-  color: #fff;
+.logo {
+  height: 48px;
 }
 
-nav a:hover {
-  text-decoration: none;
-  color: #6c6d22;
+.logo-text {
+  font-size: 28px;
+  font-weight: 700;
+  color: #000;
 }
 
-.navigation-icons {
-  background-color: #EC4C8A;
-  border: none;
+.nav-container {
+  display: flex;
+  align-items: center;
+}
+
+.links-list {
+  list-style: none;
+}
+
+.link-item > a {
+  color: #000;
+  font-size: 20px;
+}
+
+.link-item > a:hover {
+  border-bottom: 4px solid #000;
 }
