--- a/src/App.css
+++ b/src/App.css
@@ -48,6 +48,8 @@ a {
 
 .links-list {
   list-style: none;
+  display: flex;
+  gap: 24px;
 }
 
 .link-item > a {
@@ -55,7 +57,8 @@ a {
   font-size: 20px;
 }
 
-.link-item > a:hover {
+.link-item > a:hover,
+.link-item > a:focus {
   border-bottom: 4px solid #000;
 }
 
