--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,8 @@ ul {
 
 .link-item > a:hover,
 .link-item > a:focus {
-  border-bottom: 4px solid #000;
+  border-bottom: 3px solid #5c73a2;
+  color: #5c73a2;
 }
 
 .link-item .active {
@@ -75,6 +76,7 @@ ul {
   flex-direction: column;
   align-items: center;
   padding: 5%;
+  background-color: #f2f2f2;
 }
 
 .rocket-container {
@@ -85,6 +87,7 @@ ul {
   border-radius: 8px;
   box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
   margin-bottom: 5%;
+  background-color: #fff;
 }
 
 .rocket-image {
@@ -139,4 +142,8 @@ ul {
 
 .rockets-reserved {
   padding: 3%;
+}
+
+.profile-container {
+  background-color: #f2f2f2;
 }
