--- a/src/App.css
+++ b/src/App.css
@@ -71,7 +71,37 @@ ul {
   text-decoration: underline;
 }
 
-.rockets-container {
+/* .my-rockets-container {
+  padding: 3%;
+} */
+
+/* .rocket-reserved-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 8px;
+  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
+  max-width: 50%;
+  margin-top: 1%;
+} */
+
+/* .rockets-reserved {
+  padding: 3%;
+} */
+
+/* .profile-container {
+  background-color: #f2f2f2;
+} */
+
+ul,
+li {
+  list-style: none;
+}
+
+.title {
+  margin: 0;
+}
+
+.rocketsContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -79,7 +109,7 @@ ul {
   background-color: #f2f2f2;
 }
 
-.rocket-container {
+.rocket {
   display: flex;
   flex-direction: row;
   column-gap: 5%;
@@ -90,18 +120,26 @@ ul {
   background-color: #fff;
 }
 
-.rocket-image {
+.rocket img {
   width: 30%;
   height: 100%;
   border-radius: 8px;
 }
 
-.rocket-description {
+.rocket p {
   margin: 3% 0 3% 0;
 }
 
-.cancel-rocket-button,
-.reserve-rocket-button {
+.rocket .detailsContainer {
+  width: 80%;
+}
+
+.rocket h3 {
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+}
+
+.rocket .reserved {
   background-color: #5c73a2;
   border: #5c73a2 solid 1px;
   border-radius: 8px;
@@ -110,13 +148,28 @@ ul {
   cursor: pointer;
 }
 
-.cancel-rocket-button {
+.rocket .reservedcancel {
   background-color: #fff;
   border: gray solid 1px;
   color: gray;
+  border-radius: 8px;
+  padding: 1% 3% 1% 3%;
 }
 
-.rocket-reserved {
+.rocket .reserved:hover {
+  color: #218bff;
+  border: #218bff 1px solid;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.rocket .reservedcancel:hover {
+  color: #fff;
+  background-color: rgb(123, 123, 123);
+  cursor: pointer;
+}
+
+.reservedBadge {
   background-color: #32b6c4d7;
   border: none;
   border-radius: 4px;
@@ -125,25 +178,4 @@ ul {
   font-size: small;
   margin-right: 3%;
   cursor: pointer;
-}
-
-.my-rockets-container {
-  padding: 3%;
-}
-
-.rocket-reserved-container {
-  display: flex;
-  flex-direction: column;
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.5) 0 1px 4px;
-  max-width: 50%;
-  margin-top: 1%;
-}
-
-.rockets-reserved {
-  padding: 3%;
-}
-
-.profile-container {
-  background-color: #f2f2f2;
 }
