--- a/src/App.css
+++ b/src/App.css
@@ -166,17 +166,19 @@ li {
 }
 
 .titleTable {
+  display: block;
   font-size: 1.5rem;
   font-weight: 400;
+  margin-block-start: 0.83em;
+  margin-block-end: 0.83em;
 }
 
-.mission-table {
+.Rocket-table {
   width: 50%;
 }
 
-.td {
-  font-weight: 500;
-    border: 1px solid #dee2e6;
+.Rocket-table td {
+  border: 1px solid #dee2e6;
     padding: 10px;
     font-size: 16px;
   }
