--- a/src/App.css
+++ b/src/App.css
@@ -181,4 +181,10 @@ li {
   border: 1px solid #dee2e6;
   padding: 10px;
   font-size: 16px;
+  border-radius: 8px;
+}
+
+.table-bordered {
+  width: 30%;
+  text-align: center;
 }
